<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <Button
        android:id="@+id/ButtonBack"
        android:layout_width="62dp"
        android:layout_height="39dp"
        android:layout_marginStart="272dp"
        android:layout_marginTop="16dp"
        android:text="@string/atr_s"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="195dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/acerca_de_nosotros"
        android:textColor="#C6A81B1B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="188dp"
        android:fontFamily="sans-serif"
        android:text="@string/como_jugar"
        android:textColor="#C6A81B1B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="78dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="368dp"
        android:fontFamily="sans-serif"
        android:text="@string/faq"
        android:textColor="#C6A81B1B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/anton"
        android:text="@string/tel"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/anton"
        android:text="@string/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/anton"
        android:text="@string/instagram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="209dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="236dp"
        android:fontFamily="@font/anton"
        android:text="@string/lorem1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="209dp"
        android:layout_height="110dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="412dp"
        android:fontFamily="@font/anton"
        android:text="@string/lorem2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>